Files app: Fix Quickview background in dark mode
Bug: b/245854340
Tests: tested manually, CSS only change
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4129253
Commit-Queue: Alex Danilo <adanilo@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1088561}

--- a/ash/webui/file_manager/untrusted_resources/files_img_content.css
+++ b/ash/webui/file_manager/untrusted_resources/files_img_content.css
@@ -28,3 +28,13 @@ img {
 #content[hidden] {
   display: none;
 }
+
+/* TODO(files-app-dark-mode): figure out what background color should be
+ * used here. */
+@media (prefers-color-scheme: dark) {
+  html,
+  body,
+  img {
+    background-color: black;
+  }
+}
